--- a/sample20.css
+++ b/sample20.css
@@ -1,6 +1,18 @@
 body{
   background:mistyrose;
 }
+table{
+ border:1px solid #ddd;
+ width:100%;
+ font-size: :25px;
+}
+td {
+  padding:1%;
+}
+
+table tr:nth-child(even){
+    background:#03FCF8;
+}
 .flex-parent{
   display: flex;
   flex-direction: row;
@@ -31,6 +43,9 @@ h2{
 }
 
 .profile-img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width:100%;
   height: auto;
 }
@@ -68,7 +83,7 @@ a{
 @media only screen and (min-width:481px) and (max-width:768px) {
   .flex-parent{
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     justify-content: center;
     flex-wrap:wrap;
   }
@@ -116,7 +131,7 @@ a{
 @media only screen and (min-width:1025px) and (max-width:1366px) {
   .flex-parent{
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     justify-content: center;
     flex-wrap:wrap;
   }
